--- a/README.adoc
+++ b/README.adoc
@@ -520,9 +520,8 @@ config-logitech-trackball-marble-righty
 config-logitech-g300-mouse
 config-logitech-g502-mouse
 config-lenovo-mouse
-
 config-touchpad
-config-touchpad
+config-extra-peripherals
 
 ----
 
@@ -545,9 +544,31 @@ config-logitech-g502-mouse
 
 ----
 
-=== Config mouses
+=== Config mouses & extra peripherals
 
 Enables natural scrolling and tweaks acceleration profile.
+
+==== `config-extra-peripherals`
+
+.file::config-extra-peripherals
+[source,sh]
+----
+#!/bin/bash
+
+do-notify "Setting natural scrolling for Dell mouse"
+xinput set-prop 'DELL Laser Mouse' 'libinput Natural Scrolling Enabled' 1
+xinput set-prop 'DELL Laser Mouse' 'Evdev Scrolling Distance' -1, -1, 1
+xinput set-prop 'DELL Laser Mouse' 'libinput Accel Speed' 0.2
+
+do-notify "Setting natural scrolling for Evoluent Vertical 4"
+xinput set-prop 'Kingsis Peripherals Evoluent VerticalMouse 4' 'libinput Natural Scrolling Enabled' 1
+xinput set-prop 'Kingsis Peripherals Evoluent VerticalMouse 4' 'Evdev Scrolling Distance' -1, -1, 1
+
+do-notify "Setting natural scrolling for Anker Vertical mouse"
+xinput set-prop 'MOSART Semi. 2.4G Wireless Mouse' 'libinput Natural Scrolling Enabled' 1
+xinput set-prop 'MOSART Semi. 2.4G Wireless Mouse' 'Evdev Scrolling Distance' -1, -1, 1
+
+----
 
 ==== `config-lenovo-n700-mouse`
 
