refactor: Use report-missing-executables for fi2en

--- a/README.adoc
+++ b/README.adoc
@@ -1349,11 +1349,7 @@ TARGET_LANG=fi gtranslate $*
 # soimort/translate-shell tool.
 #
 
-if (! which trans >/dev/null >[2=1]) {
-	echo trans command not found >[1=2]
-	echo Make sure you have soimort/translate-shell installed >[1=2]
-	exit 1
-}
+report-missing-executables trans soimort/translate-shell || exit 1
 
 TARGET_LANG=en gtranslate $*
 
