--- a/README.adoc
+++ b/README.adoc
@@ -1361,8 +1361,9 @@ anchor:ff[]
 
 Quickly opens file with Emacs + https://github.com/cmpitg/emnode[Emnode]
 server.  Emacs has to be setup with Emnode to listen to port `EMACS_PORT`,
-handling `/open/<file-path>` URI (i.e. command `curl 0:${EMACS_PORT}/open//m/src` opens
-`/m/src` in Emacs).  Sample setup is as followed:
+handling `/open/<file-path>` URI (i.e. command `curl
+0:${EMACS_PORT}/open//m/src` opens `/m/src` in Emacs).  Sample setup is as
+followed:
 
 [source,lisp]
 ----
@@ -1391,7 +1392,7 @@ handling `/open/<file-path>` URI (i.e. command `curl 0:${EMACS_PORT}/open//m/src
 
 If Emacs is not yet started or not listening on port `EMACS_PORT`, start one
 with custom Emacs init file stored in environment variable `EMACS_INIT`.  By
-default, `EMACS_INIT` is set to `"~/emacs-config/src/init.el"` and
+default, `EMACS_INIT` is set to `"/m/src/emacs-cmpitg/src/init.el"` and
 `EMACS_PORT` is set to `9999`.
 
 .file::ff
@@ -1399,27 +1400,7 @@ default, `EMACS_INIT` is set to `"~/emacs-config/src/init.el"` and
 ----
 #!/bin/bash
 
-export GPG_TTY=$(tty)
-
-if [[ -z "$EMACS_INIT" ]]; then
-	EMACS_INIT="~/emacs-config/src/init.el"
-fi
-
-if [[ -z "$EMACS_PORT" ]]; then
-	EMACS_PORT=9999
-fi
-
-(curl 0:$EMACS_PORT &>/dev/null) && server_running_p_=1 || server_running_p_=0
-
-if [[ "${server_running_p_}" -eq "1" ]] ; then
-	if [[ "$1" == /* ]] ; then
-		curl "0:${EMACS_PORT}/open/$1"
-	else
-		curl "0:${EMACS_PORT}/open/$PWD/$1"
-	fi
-else
-	emacs -Q -l "${EMACS_INIT}" "$@"
-fi
+remacs edit "$@"
 
 ----
 
