--- a/README.adoc
+++ b/README.adoc
@@ -28,6 +28,8 @@ TODO: Add script to verify checksum
 
 TODO: Verify checksums for downloaded files
 
+TODO: Write about shell design flaws
+
 == Requirements
 
 For everything to function correctly, you need:
