--- a/README.adoc
+++ b/README.adoc
@@ -1095,7 +1095,7 @@ This script takes a list of files as arguments.
 report-missing-executables ffmpeg Ffmpeg || exit 1
 
 for (f in $*) {
-	ffmpeg -i $f -vn -aq 1 `{echo $f | replace-extension mp3}
+	ffmpeg -i $f -vn -aq 1 `{echo $f | replace-extension ogg}
 }
 
 ----
