--- a/README.adoc
+++ b/README.adoc
@@ -1082,7 +1082,8 @@ This script takes a list of files as arguments.
 report-missing-executables ffmpeg Ffmpeg || exit 1
 
 for (f in $*) {
-	ffmpeg -i $f -vn -aq 1 `{echo $f | replace-extension mp3}
+	new_name=`{echo $f | replace-extension mp3}
+	ffmpeg -i $f -vn -aq 1 $"new_name
 }
 
 ----
@@ -1099,7 +1100,8 @@ This script takes a list of files as arguments.
 report-missing-executables ffmpeg Ffmpeg || exit 1
 
 for (f in $*) {
-	ffmpeg -i $f -vn -aq 1 `{echo $f | replace-extension ogg}
+	new_name=`{echo $f | replace-extension ogg}
+	ffmpeg -i $f -vn -aq 1 $"new_name
 }
 
 ----
