--- a/README.adoc
+++ b/README.adoc
@@ -19,6 +19,10 @@ and documentation, you need latest stable version of
 https://github.com/cmpitg/ulquikit[Ulquikit].  You could also clone the repo
 and start using it yourself.  All executables are in `bin/`.
 
+TODO: report-missing-executables supports --notify-desktop
+
+TODO: Arg parser → env vars
+
 TODO: Explain how commands are built the way they are built below:
 * When to pass as argumment?  When to pass into stdin?
 * When to output as text?  Human-readable?
