--- a/README.adoc
+++ b/README.adoc
@@ -665,14 +665,14 @@ kbd:[Ctrl+X/C/V] works as expected.
 
 setopt shwordsplit
 
-id_=$( \
+mouse_=$( \
 	xinput list \
 	| grep "Logitech Gaming Mouse G300" \
 	| head -1 \
 	| cut -d'=' -f2 \
 	| awk '{ print $1 }' \
 )
-id_keyboard_=$( \
+keyboard_=$( \
 	xinput list \
 	| grep "Logitech Gaming Mouse G300" \
 	| tail -1 \
@@ -680,21 +680,21 @@ id_keyboard_=$( \
 	| awk '{ print $1 }' \
 )
 
-test -z "${id_}"          && exit 0
-test -z "${id_keyboard_}" && exit 0
+test -z "${mouse_}"          && exit 0
+test -z "${keyboard_}" && exit 0
 
 ##############################################################################
 
-do-notify-short "Configuring Logitech G300 mouse"
+do-notify-short "Configuring Logitech G300 mouse
 * Set natural scrolling
 * Reset keyboard layout
 "
 {
-	xinput set-prop "${mouse_}" "libinput Natural Scrolling Enabled" 1
+	xinput set-prop "${mouse_}" "libinput Natural Scrolling Enabled" 1 2>/dev/null
 } || {
-	xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1
+	xinput set-prop "${mouse_}" "Evdev Scrolling Distance" -1, -1, 1 2>/dev/null
 }
-setxkbmap us -device "${id_keyboard_}"
+setxkbmap us -device "${keyboard_}"
 
 ----
 
