--- a/README.adoc
+++ b/README.adoc
@@ -704,7 +704,7 @@ keyboard_=$( \
 	| awk '{ print $1 }' \
 )
 
-test -z "${mouse_}"          && exit 0
+test -z "${mouse_}"    && exit 0
 test -z "${keyboard_}" && exit 0
 
 ##############################################################################
@@ -964,7 +964,7 @@ Lots of tweaks, the code should be self-explanatory though.
 ----
 #!/bin/bash
 
-(xinput list | grep -i touchpad &>/dev/null) || exit 0
+check-xinput -i "touchpad" || exit 0
 
 id_=$( \
 	xinput list \
@@ -976,11 +976,13 @@ id_=$( \
 scrolling_distance_2_=$(xinput list-props 13 \
 	| grep 'Synaptics Scrolling Distance' \
 	| gnu-awk '{ print $NF }' \
+	| sed 's/-//g' \
 )
 scrolling_distance_1_=$(xinput list-props 13 \
 	| grep 'Synaptics Scrolling Distance' \
 	| gnu-awk '{ print $(NF - 1) }' \
-	| cut -d',' -f1\
+	| cut -d',' -f1 \
+	| sed 's/-//g' \
 )
 
 ##############################################################################
@@ -1039,9 +1041,13 @@ newline
 
 ##############################################################################
 
-xinput set-prop "${id_}" "libinput Tapping Enabled" 0
-xinput set-prop "${id_}" "libinput Natural Scrolling Enabled" 1
-xinput set-prop "${id_}" "Synaptics Scrolling Distance" "-${scrolling_distance_1_}" "-${scrolling_distance_2_}"
+(
+	xinput set-prop "${id_}" "libinput Tapping Enabled" 0 &>/dev/null
+	xinput set-prop "${id_}" "libinput Natural Scrolling Enabled" 1 &>/dev/null
+) || (
+	xinput set-prop "${id_}" "Synaptics Scrolling Distance" "-${scrolling_distance_1_}" "-${scrolling_distance_2_}" &>/dev/null
+	xinput set-prop "${id_}" "Synaptics Two-Finger Scrolling" 1, 1 &>/dev/null
+)
 
 # xinput get-button-map "SynPS/2 Synaptics TouchPad" 1 2 3 4 5 6 7 8 9 10 11 12
 
