fix: Restore SHELL var env in run-with-new-env

--- a/README.adoc
+++ b/README.adoc
@@ -155,8 +155,12 @@ Using Dash due to its speed & lightweight characteristics.
 ----
 #!/bin/dash
 
+current_shell_="${SHELL}"
 SHELL=/bin/dash . ~/.env
+export SHELL="${current_shell_}"
+unset current_shell_
 exec "$@"
+
 ----
 
 === `9` - sets up the environment for Plan9port applications
