feat: Add term-emu

--- a/README.adoc
+++ b/README.adoc
@@ -281,6 +281,17 @@ acme -a \
 
 ----
 
+=== `term-emu` - wrapper for terminal emulator
+
+.file::term-emu
+[source,sh]
+----
+#!/bin/dash
+
+exec terminator "$@"
+
+----
+
 === `newline`
 
 .file::newline
