--- a/README.adoc
+++ b/README.adoc
@@ -9,15 +9,9 @@
 
 :toc:
 
-A collection of my scripts.  Many of them are written in
-http://doc.cat-v.org/plan_9/4th_edition/papers/rc[Rc shell], for
-Bourne-or-Bash-compatible shell suffers from many design flaws, making it
-difficult to maintain.
+Script collection.  Many of them are written in http://doc.cat-v.org/plan_9/4th_edition/papers/rc[Rc shell], for Bourne-or-Bash-compatible shell suffers from many design flaws, making it difficult to maintain.
 
-This document is written in literate programming style.  To generate scripts
-and documentation, you need latest stable version of
-https://github.com/cmpitg/ulquikit[Ulquikit].  You could also clone the repo
-and start using it yourself.  All executables are in `bin/`.
+This document is written in literate programming style.  To generate scripts and documentation, you need latest stable version of https://github.com/cmpitg/ulquikit[Ulquikit].  You could also clone the repo and start using it yourself.  All executables are in `bin/`.
 
 TODO: report-missing-executables supports --notify-desktop
 
