--- a/README.adoc
+++ b/README.adoc
@@ -251,7 +251,7 @@ exec 9 rc "$@"
 === `acme` - runs Plan9port Acme with `9`
 
 Font can be chosen by setting the `font` environment variable.  By default, it
-is set to `/m/9p-fonts/Noto Mono/11a/font`.
+is set to `/m/9p-fonts/Go Mono/11a/font`.
 
 .file::acme
 [source,sh]
@@ -264,7 +264,7 @@ is set to `/m/9p-fonts/Noto Mono/11a/font`.
 #
 
 if (~ $font '') {
-	font='/m/9p-fonts/Noto Mono/11a/font'
+	font='/m/9p-fonts/Go Mono/11a/font'
 }
 
 mkdir -p /m/acme
