feat: Add script to list broken symlinks

--- a/README.adoc
+++ b/README.adoc
@@ -444,6 +444,25 @@ fi
 
 ----
 
+=== `list-broken-symlinks` - lists broken symlinks in a directory
+
+TODO: `--help`
+
+.file::list-broken-symlinks
+[source,sh]
+----
+#!/bin/dash
+
+dir_=$(readlink -f "${1:-.}")
+
+for file_ in "${dir_}/"*; do
+    if [ ! -e "${file_}" ]; then
+        echo "${file_}"
+    fi
+done
+
+----
+
 === `check-xinput` - checks if a device appears in `xinput list`
 
 .file::check-xinput
