--- a/README.adoc
+++ b/README.adoc
@@ -2317,6 +2317,14 @@ exec google-chrome --remote-debugging-port=${CHROME_REMOTE_DEBUGGING_PORT:-9222}
 #!/bin/dash
 
 exec run-chrome --app=https://web.whatsapp.com/
+==== Drop-down terminal emulator
+
+.file::run-drop-down-term-emu
+[source,sh]
+----
+#!/bin/dash
+
+exec guake "$@"
 
 ----
 
